--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Calculateuniversitylessonaverageapp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!--BU AŞAĞI YAZDIĞIMIZ HER ŞEY OVERRİDE EDERİZ ONUN DIŞINDA ÜSTTEKİ PARENTI KULLANIR-->
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
