--- a/app/src/main/res/layout/activity_add_new_lesson.xml
+++ b/app/src/main/res/layout/activity_add_new_lesson.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <AutoCompleteTextView
-        android:id="@+id/autoCompleteTextView"
+        android:id="@+id/newLesson"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -16,33 +16,40 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_sil"
         android:layout_width="113dp"
         android:layout_height="47dp"
         android:layout_marginEnd="56dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextView"
+        android:text="Sil"
+        app:layout_constraintBottom_toBottomOf="@+id/newLesson"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner3"
+        android:id="@+id/newSpinnerCredit"
         android:layout_width="199dp"
         android:layout_height="22dp"
         android:layout_marginTop="52dp"
-        app:layout_constraintEnd_toStartOf="@+id/spinner4"
+        app:layout_constraintEnd_toStartOf="@+id/newSpinnerNote"
         android:entries="@array/Lesson_Credis"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/newLesson" />
 
     <Spinner
-        android:id="@+id/spinner4"
+        android:id="@+id/newSpinnerNote"
         android:layout_width="199dp"
         android:layout_height="22dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         android:entries="@array/Notes"
-        app:layout_constraintStart_toEndOf="@+id/spinner3"
-        app:layout_constraintTop_toTopOf="@+id/spinner3" />
+        app:layout_constraintStart_toEndOf="@+id/newSpinnerCredit"
+        app:layout_constraintTop_toTopOf="@+id/newSpinnerCredit" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/black"
+        tools:ignore="MissingConstraints">
+    </View>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
