--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btn-hesapla"
+        android:id="@+id/btn_hesapla"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
