--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,6 +18,7 @@
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
+            android:background="@color/white"
             android:hint="ders adı giriniz"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +28,7 @@
             android:layout_width="126dp"
             android:layout_height="67dp"
             android:layout_marginEnd="16dp"
+            android:background="@color/white"
             android:text="Ekle"
             app:layout_constraintBottom_toBottomOf="@+id/auto_edit_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +39,7 @@
             android:layout_width="178dp"
             android:layout_height="24dp"
             android:layout_marginTop="48dp"
+            android:background="@color/white"
             android:entries="@array/Lesson_Credis"
             app:layout_constraintEnd_toStartOf="@+id/spn_notes"
             app:layout_constraintHorizontal_bias="0.5"
@@ -47,6 +51,7 @@
             android:layout_width="178dp"
             android:layout_height="25dp"
             android:layout_marginTop="48dp"
+            android:background="@color/white"
             android:entries="@array/Notes"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
